<resources>
    <string name="app_name" translatable="false">Soran Travel</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Soran Travel</string>
    <string name="nav_header_subtitle">explore Soran city</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!--  Hotel view resources - start  -->
    <string name="soran_palace_hotel_desc">Soran Palace Hotel sample</string>
    <string name="hotel_name">Soran Palace</string>
    <!--  Hotel view resources - start  -->
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_videos">Videos</string>
    <string name="menu_setting">Setting</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_hotels">Hotels</string>
    <string name="menu_restaurants">Restaurants</string>
    <string name="menu_where_to_go">Where To Go</string>
    <string name="menu_weather">Weather</string>

    <!--    home UI strings - START -->

    <!--    BUTTONS  -->
    <string name="FG_home_HOTELS_BTN">Hotels</string>
    <string name="FG_home_RESTAURANTS_BTN">Restaurants</string>
    <string name="FG_home_WTG_BTN">Where To Go</string>

    <!--  ABOUT SORAN  -->
    <string name="about_title_text">About</string>

    <!--  about PARAGRAPH  -->
    <string name="GENERAL_INFO_TITLE_TEXT">General Info</string>
    <string name="GENERAL_INFO_TEXT">Soran (Kurdish: سۆران ,Soran‎) or Diana is a city in Erbil Governorate, and the capital of Soran District. Diana is one of the largest cities in Kurdistan Region, and is expected to increase within the next ten years by a further 50,000 people.</string>

    <string name="ETYMOLOGY_TITLE_TEXT">Etymology </string>
    <string name="ETYMOLOGY_TEXT">The name Diana is derived from the Kurdish word for Christian, since it was originally an Assyrian Christian village prior to expanding in the last 20 years. The Name Soran is derived from the Kurdish Soran tribe who have settled in this area along with the Assyrians.</string>

    <string name="HISTORY_TITLE_TEXT">History </string>
    <string name="HISTORY_TEXT">
    The city of Diana was originally a small village inhabited by Nochiya Assyrians of the Rawanduz Clan ruled by Kurdish Aghas of the Soran tribe,[4] and continued to be for many years up until an influx of Kurdish refugees turned it into a large city. Since the early 1990s Soran District has been flooded with Kurdish refugees returning from Iran, where they fled to between 1974 and 1989 to avoid the Second Iraqi–Kurdish War and the Al-Anfal Campaign. Due to this influx, The population grew from 27,000 in 1991, before the Kurdish uprising and establishment of Iraqi Kurdistan, to about 175,000 in the last fifteen years. Most of these returnees settled in and around Soran, unable to return to their original villages which had been destroyed by the Baathist regime\’s army, or unwilling to return to locations still under threat of Turkish bombings and incursions due to the presence of PKK forces there.  The city\'s original name, Siddeeq was changed to Soran, Siddeeq being a camp which was constructed in the late 70s and settled with Kurdish inhabitants from the surrounding areas who had been forcefully displaced by Saddam Hussein\'s regime. After the uprising in 1991, Siddeeq, which is an Arabic name, was changed to the Kurdish name of Soran. However, the city of Diyana has kept its name.  Diana is located on the Hamilton Road connecting Arbil to Iran through Hajomaran (a sub-district of Choman district).
    </string>

    <string name="LANGUAGES_TITLE_TEXT">Languages </string>
    <string name="LANGUAGES_TEXT">
    Both Sorani and Bahdini are equally common and used in the region. Persian is widely spoken along with the two dialects of Kurdish because a large number of the inhabitants of the town are returnees from Iran, and a large number of them were even born and raised in Iran. Assyrians of Hawdiyaan village and Diyana speak Syriac their native language along with Kurdish and Arabic and have their own Syriac schools.
    </string>

    <string name="WIKIPEDIA_REFERENCE_TEXT">Read more on <a href="https://en.wikipedia.org/wiki/Soran,_Iraq">wikipedia.org</a></string>

    <!--    home UI strings - END -->

    <!--  place.xml  STARTED -->
    <string name="phone_title_text">Phone No:</string>
    <!--  place.xml  END -->

    <!--  fragment_XXX_show.xml  STARTED -->
    <string name="rating_label">Rating:</string>
    <string name="no_of_raters_text">%1$d Reviews</string>
    <!--  fragment_XXX_show.xml  END -->

    <!-- RestaurantListAdapter.java -->
    <string name="not_supplied_text">not provided</string>
    <string name="communicate">Communicate</string>

    <!--  setting fragment  -->
    <string name="language_label">Langauge:</string>

    <!--  share fragment  -->
    <string name="share_detail_text">This application is the result of an assignment in the Mobile Application subject to make a travel application for a city in kurdistan region. We decided to design &amp; develop it collaboratively as a team of four. feel free to give feedback or make it better.</string>
    <string name="GITHUB_LINK_TEXT" translatable="false"><a href="https://github.com/akamfoad/soran-travel">@akamfoad/soran-travel</a></string>
    <string name="TWITTER_LINK_TEXT" translatable="false"><a href="https://twitter.com/AkamFoad">@AkamFoad</a></string>

    <!--  Languages array  -->
    <string-array name="languages">
        <item>English</item>
        <item>کوردی</item>
        <item>العربیة</item>
    </string-array>

    <!--  video fragment  -->
    <string name="gali_ali_bag_label">Gali Ali Bag</string>
    <string name="kani_maran_label">Kani Maran Resort</string>
    <string name="jndian_label">Jndian Resort</string>

    <!--  Weather Fragment  -->
    <string name="WEATHER_API_KEY" translatable="false">cc5d224ef51432465cd86927834c7da0</string>
    <string name="soran_iraq">Soran, Iraq</string>
    <string name="pressure">Pressure:</string>
    <string name="humidity">Humidity:</string>
    <string name="wind">Wind:</string>
</resources>
