<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_videos"
            android:icon="@drawable/ic_menu_video"
            android:title="@string/menu_videos" />
        <item
            android:id="@+id/nav_hotels"
            android:icon="@drawable/ic_menu_hotel"
            android:title="@string/menu_hotels" />
        <item
            android:id="@+id/nav_resturants"
            android:icon="@drawable/ic_menu_hamburger"
            android:title="@string/menu_restaurants" />
        <item
            android:id="@+id/nav_where_to_go"
            android:icon="@drawable/ic_menu_where_to_go"
            android:title="@string/menu_where_to_go" />
        <item
            android:id="@+id/nav_weather"
            android:icon="@drawable/ic_weather_icon"
            android:title="@string/menu_weather" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_menu_setting"
            android:title="@string/menu_setting" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
        </menu>
    </item>

</menu>
